<resources>
    <string name="app_name">ADAM Smart Farming System</string>
    <string name="soil_ph">Soil PH:</string>
    <string name="nitrogen">Nitrogen:</string>
    <string name="phosphorous">Phosphorous:</string>
    <string name="potassium">Potassium:</string>
    <string name="temperature">Temperature:</string>
    <string name="temp">Temperature</string>
    <string name="humid">Humidity</string>
    <string name="ph">Soil PH</string>
    <string name="soil_moisture">Moisture</string>
    <string name="water_ph">Water PH</string>
    <string name="turbidity">Turbidity</string>
    <string name="n">Nitrogen</string>
    <string name="p">Potassium</string>
    <string name="k">Phosphorous</string>
    <string name="get_data">Get Data</string>
    <string name="predict">Get Crop Suggestions</string>
    <string name="iot_sensor_values">IoT Sensor Values</string>
    <string name="plant_prediction_tabs">Plant Prediction Tabs</string>
    <string name="prediction_report_image">Prediction Report Image</string>
    <string name="dummy_val">0.00</string>
    <string name="prediction_time">Time:</string>
    <string name="description">Description:</string>
    <string name="name">Name:</string>
    <string name="unknown_crop">Unknown Crop</string>
    <string name="type">Type:</string>
    <string name="percentage_val">%</string>
    <string name="unknown">Unknown</string>
    <string name="prediction_percent_default">0.00%</string>
    <string name="info_icon_desc">Info Icon Description</string>
    <string name="date_place_holder">Day,Month XXXX, XX:XX XX</string>
    <string name="back_button_icon">Back icon</string>
    <string name="return_text">Return</string>
    <string name="connect">Connect</string>
    <string name="connected">Connected</string>
    <string name="connecting">Connecting…</string>
    <string name="reconnecting">Reconnecting</string>
    <string name="disconnect">Disconnect</string>
    <string name="disconnected">Disconnected</string>
    <string name="subscribe">Monitor Zone</string>
    <string name="status">Status:</string>
    <string name="user_id">User ID:</string>
    <string name="topic">Topic:</string>
    <string name="enter_topic">Enter Topic</string>
    <string name="connection_error">There was a connection error:</string>
    <string name="encoding_error">There was an encoding error:</string>
    <string name="subscription_error">There was a subscription error:</string>
    <string name="default_sensor">Default</string>
    <string name="sensor_image">Sensor Image</string>
    <string name="image_to_remove_an_item">image to remove an item</string>
    <string name="prediction_requirement">Predictions require Soil and Atmospheric sensor values</string>
    <string name="prediction_failed">The server is currently offline</string>
    <string name="failed_prediction">Prediction failed, please try again later</string>
    <string name="no_topic_msg">To subscribe please input a topic</string>
    <string name="serialization_error">The was an error serializing the string</string>
    <string name="sensorTabs">SensorTabs</string>
    <string name="close">Close</string>
    <string name="sensor_warning">Sensor Warning!</string>
    <string name="soil_moisture_warning">Soil moisture is far too high</string>
    <string name="water_ph_warning">Water PH values are too high</string>
    <string name="sensor_info">Sensor Info</string>
    <string name="sensors">Sensors</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chart_title">Chart Title</string>
</resources>