<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/prediction_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="10dp"
    app:cardElevation="8dp"
    app:cardMaxElevation="10dp"
    app:layout_wrapBehaviorInParent="skipped">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/prediction_constraint"
        android:background="@color/main_green_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/prediction_image"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/prediction_report_image"
            app:layout_constraintBottom_toTopOf="@+id/prediction_item_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/report_icon_white" />

        <TextView
            android:id="@+id/item_prediction_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:textColor="@color/sensorBackground"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/delete_item_view"
            app:layout_constraintStart_toEndOf="@+id/prediction_item_description" />

        <TextView
            android:id="@+id/prediction_item_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="4dp"
            android:text="@string/prediction_time"
            android:textColor="@color/sensorBackground"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/delete_item_view"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/image_to_remove_an_item"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/delete_icon_white" />

        <TableLayout
            android:id="@+id/sensor_table_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintBottom_toTopOf="@+id/item_prediction_time"
            app:layout_constraintEnd_toStartOf="@+id/delete_item_view"
            app:layout_constraintStart_toEndOf="@+id/prediction_image"
            app:layout_constraintTop_toTopOf="parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp">

                <TextView
                    android:id="@+id/item_name_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/soil_ph"
                    android:textColor="@color/sensorBackground"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/soil_ph_val"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/dummy_val"
                    android:textColor="@color/sensorBackground"
                    android:textSize="12sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp">

                <TextView
                    android:id="@+id/phosphorous_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phosphorous"
                    android:textColor="@color/sensorBackground"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/phosphorous_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/dummy_val"
                    android:textColor="@color/sensorBackground"
                    android:textSize="12sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp">

                <TextView
                    android:id="@+id/prediction_type_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/potassium"
                    android:textColor="@color/sensorBackground"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/potassium_val"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/dummy_val"
                    android:textColor="@color/sensorBackground"
                    android:textSize="12sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp">

                <TextView
                    android:id="@+id/nitrogen_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nitrogen"
                    android:textColor="@color/sensorBackground"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/ntrogen_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/dummy_val"
                    android:textColor="@color/sensorBackground"
                    android:textSize="12sp" />
            </TableRow>
        </TableLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>