<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/prediction_item_constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_theme_background">

    <ImageView
        android:id="@+id/report_prediction_item_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/prediction_report_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/report_icon_green_v2" />

    <TextView
        android:id="@+id/prediction_time_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/white"
        android:text="@string/date_place_holder"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/report_prediction_item_image"
        app:layout_constraintStart_toEndOf="@+id/return_btn"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/return_btn"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#3F51B5"
        android:text="@string/return_text"
        app:icon="@drawable/back_button_icon"
        app:iconPadding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_prediction_items"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/report_prediction_item_image"
        tools:listitem="@layout/prediction_item_card_view" />

</androidx.constraintlayout.widget.ConstraintLayout>